# grint

./: CHANGELOG.md  Cargo.toml  Grint.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  grintfile.rs  lib.rs  main.rs  run.rs  settings.rs  subcommand.rs  task.rs
tests/: assert_success.rs  dependencies.rs  edit.rs  lib.rs  list.rs  show.rs  tempdir.rs  test.rs  utils.rs
