[package]
name = "grint"
version = "0.1.0"
edition = "2024"
autotests = false

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
toml = "0.9.2"

[dev-dependencies]
tempfile = "3.20.0"
pretty_assertions = "1.4.1"

[[bin]]
path = "src/main.rs"
name = "grint"
test = false

[[test]]
name = "integration"
path = "tests/lib.rs"
