[package]
name = "grint"
version = "0.3.0"
autotests = false
categories = ["command-line-utilities", "development-tools"]
description = "Modern, declarative build tool"
edition = "2024"
homepage = "https://github.com/metebykl/grint"
keywords = ["command-line", "task", "runner", "development"]
license = "Apache-2.0"
repository = "https://github.com/metebykl/grint"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
indexmap = "2.10.0"
toml_edit = "0.23.2"

[dev-dependencies]
tempfile = "3.20.0"
pretty_assertions = "1.4.1"
which = "8.0.0"

[[bin]]
path = "src/main.rs"
name = "grint"
test = false

[[test]]
name = "integration"
path = "tests/lib.rs"
